feat: 1. disable annoying ts any warning 2. add custom color on tailwind 3. add greetings on dashboard

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "allowJs": true,
+    "checkJs": false
   }
 }
