--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "pinia": "^2.2.4",
     "pocketbase": "^0.21.5",
+    "posthog-js": "^1.181.0",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
