--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "jspdf": "^2.5.2",
     "pinia": "^2.2.4",
     "pocketbase": "^0.21.5",
     "posthog-js": "^1.181.0",
